# geoxidated

./: .gitignore  Cargo.toml  README.md  configuration.toml  test.http  test.json
src/: config.rs  controllers.rs  data.rs  main.rs  model.rs  parser.rs  parser.rs.old  repository.rs  routes.rs  services.rs
src/controllers/: features_controller.rs
src/data/: feature_collection_data.rs  feature_data.rs  filter_data.rs
src/model/: bbox.rs  feature.rs  feature_collection.rs  filter.rs  geo_entity.rs  geojson.rs  geometry.rs  get_single.rs  id.rs  json.rs  property.rs  query.rs  value.rs
src/repository/: features_repository.rs
src/services/: feature.rs  feature_service.rs
