[package]
name = "geoxided"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rocket = "0.5.0"
derive-new = "0.6.0"
enum_dispatch = "0.3.12"
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
postgres = "0.19.7"
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres" ] }
tokio = "1.35.0"
futures = "0.3.29"
serde = "1.0.193"
toml = "0.8.8"
derive_more = "0.99.17"
rocket_cors = "0.6.0"
log = "0.4.20"
